Adding basic unit test for IDropCalculationStrategy